[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["Eduardo Lira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
update = "^0.0.1"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
